--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
                         </div>
                         <input type="submit" value="Calculate" class="btn btn-dark btn-block">
                     </form>
+
+                    <!-- LOAD HERE-->
+                    
+                    <!-- <div id="loading">
+                        <img src="img/loading.gif" alt="" srcset="">
+                    </div> -->
+
+                    <!-- RESULTS -->
+
+                    <div id="results" class="pt-4">
+                        <h5>results</h5>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">Monthly Payment</span>
+                                <input type="number" class="form-control" id="monthly-payment" disabled>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">Total Payment</span>
+                                <input type="number" class="form-control" id="total-payment" disabled>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">Total Interest</span>
+                                <input type="number" class="form-control" id="total-interest" disabled>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
